--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,4 +40,21 @@
     background-image: radial-gradient(circle, #f9731615 1px, transparent 1px);
     background-size: 30px 30px;
   }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background: #e5e7eb;
+    border-radius: 10px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #d1d5db;
+  }
 }
